// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`assetMinBuilder > assetRegistry > assetMetadatas > should be correct config 1`] = `
SubstrateQueryConfig {
  "args": [
    "<ASSET>",
  ],
  "func": "assetMetadatas",
  "module": "assetRegistry",
  "transform": [Function],
  "type": "Substrate",
}
`;

exports[`assetMinBuilder > assetRegistry > assetMetadatas > should transform correctly 1`] = `999n`;

exports[`assetMinBuilder > assetRegistry > currencyMetadatas > should be correct config 1`] = `
SubstrateQueryConfig {
  "args": [
    "<ASSET>",
  ],
  "func": "currencyMetadatas",
  "module": "assetRegistry",
  "transform": [Function],
  "type": "Substrate",
}
`;

exports[`assetMinBuilder > assetRegistry > currencyMetadatas > should transform correctly 1`] = `999n`;

exports[`assetMinBuilder > assets > asset > should be correct config 1`] = `
SubstrateQueryConfig {
  "args": [
    "<ASSET>",
  ],
  "func": "asset",
  "module": "assets",
  "transform": [Function],
  "type": "Substrate",
}
`;

exports[`assetMinBuilder > assets > asset > should transform correctly 1`] = `999n`;
